[tool.poetry]
name = "davizct"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.13.1"
jupyterlab = "^3.6.2"
jupyter-contrib-nbextensions = "^0.7.0"
wordcloud = "^1.8.2"
ipylab = "^0.7.1"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
ipython = "^8.11.0"
# zoonyper = { git = "https://github.com/kingsdigitallab/zoonyper.git", branch = "v0.1.0" }
zoonyper = {path = "./zoonyper", develop = true}
jupyterlab-code-formatter = "^1.5.3"
isort = "^5.12.0"
jupyterlab-git = "^0.41.0"
jupyterlab-tabnine = "^0.0.24"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.5.0"
tag_format = "$major.$minor.$patch"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
